<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backimg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/choose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:fontFamily="@font/yang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />


    <TextView
        android:id="@+id/what_content1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yang"
        android:text="@string/what_content1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_title"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/what_content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yang"
        android:text="@string/what_content2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_content1"
        app:layout_constraintVertical_bias="0.013" />

    <ImageButton
        android:id="@+id/left_top"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/ripple_custom"
        android:src="@mipmap/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <ImageButton
        android:id="@+id/right_top"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/ripple_custom"
        android:src="@mipmap/insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <ImageButton
        android:id="@+id/right_buttom"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/ripple_custom"
        android:src="@mipmap/faq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <ImageButton
        android:id="@+id/left_buttom"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/ripple_custom"
        android:src="@mipmap/find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <TextView
        android:id="@+id/textView4"
        android:fontFamily="@font/yang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="도움말"
        app:layout_constraintBottom_toBottomOf="@+id/right_buttom"
        app:layout_constraintEnd_toEndOf="@+id/right_buttom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/right_buttom"
        app:layout_constraintTop_toBottomOf="@+id/right_top"
        app:layout_constraintVertical_bias="0.832" />

    <TextView
        android:id="@+id/textView3"
        android:fontFamily="@font/yang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="건물 정보 조회"
        app:layout_constraintBottom_toBottomOf="@+id/right_buttom"
        app:layout_constraintEnd_toEndOf="@+id/left_buttom"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/left_buttom"
        app:layout_constraintTop_toBottomOf="@+id/left_top"
        app:layout_constraintVertical_bias="0.832" />

    <TextView
        android:id="@+id/textView1"
        android:fontFamily="@font/yang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="안전점검 결과 조회"
        app:layout_constraintBottom_toBottomOf="@+id/left_top"
        app:layout_constraintEnd_toEndOf="@+id/left_top"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left_top"
        app:layout_constraintTop_toTopOf="@+id/left_top"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yang"
        android:text="건축물 이름 삽입"
        app:layout_constraintBottom_toBottomOf="@+id/right_top"
        app:layout_constraintEnd_toEndOf="@+id/right_top"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/right_top"
        app:layout_constraintTop_toTopOf="@+id/right_top"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/yang"
        android:text="Building Information Mobile Service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.697" />

</androidx.constraintlayout.widget.ConstraintLayout>